--- a/.swiftpm/xcode/xcshareddata/xcschemes/idd-softwareupdate.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/idd-softwareupdate.xcscheme
@@ -52,6 +52,12 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-standardLog true"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
